@@ -44,6 +44,6 @@ EBUILD calculate-sources-2.6.37.6.ebuild 1363 RMD160 561f6dba1255bb37fa01773783a
 EBUILD calculate-sources-2.6.38.8.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e79f52c4941cb SHA1 18a81f5fc9d309104dff70d96d46b5cb161c1492 SHA256 e997164cc8fcf5fd474c39cf35e518dea55878e4131a4037248aaf79cae9d3c7
 EBUILD calculate-sources-2.6.39.4-r1.ebuild 746 RMD160 67ca1ff5ab4d3d593ab50efaea3ce4e632cf62f4 SHA1 e84d2ba547440e5546bdbc51fedf310cc68dd8c2 SHA256 eb949421bdbe497318fa3b460591c20dcc76fde4f716da9d794c0e7bf1df126b
 EBUILD calculate-sources-2.6.39.4.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e79f52c4941cb SHA1 18a81f5fc9d309104dff70d96d46b5cb161c1492 SHA256 e997164cc8fcf5fd474c39cf35e518dea55878e4131a4037248aaf79cae9d3c7
-EBUILD calculate-sources-3.0.4.ebuild 746 RMD160 da051af5a7f5ff6a1228bef17da3080d8ef0db90 SHA1 fd7185d66674b221cae46f867fdf8a24a388230c SHA256 dad67466a9af28d384bdfd83a48d9175e738adf6d163749a3fd615fc7aedf46b
-MISC ChangeLog 7496 RMD160 68f3776e2212ba9f4663d097881e2c44359c4093 SHA1 f4a6194c218849abebd41d722ffb622474ff4022 SHA256 9d8565abc42732674038cbe4f46da777d51ea8b124c519d4778c47d708b9facc
+EBUILD calculate-sources-3.0.4.ebuild 751 RMD160 ced335c07943c0af9dcd9bb6bc6890a8ffb66a7f SHA1 90580160d6a2024d9fa2317e4361555f613e65e1 SHA256 97a38d5c002a260fd38144b4d846a97dd8dde15826e13643dec7f7a7a106cec2
+MISC ChangeLog 7628 RMD160 1ddbca934ab85c95273aa488759ed64eb9cff4c1 SHA1 f7dbf5c6e1f751a89b7abe99f0b39d33d9dd4b5a SHA256 bbd8db2fc9698d209d453076d5289635986ccb23df8803a6f1251979c244f2d2
 MISC metadata.xml 523 RMD160 855108e020b3f1fe32f843accc94a57f15affa0e SHA1 7fbeb862ff719c9ef63925b7f18104ff6eac27dd SHA256 997dc6d02e44eef86cc9653d7588b9f65e9033f02e28b3a8d98f48df82561f3c
