@@ -4,7 +4,7 @@
 
 ETYPE="sources"
 
-inherit calculate-kernel-2 eutils
+inherit calculate-kernel-3 eutils
 
 DESCRIPTION="Full sources including the Calculate patchset for the ${KV_MAJOR}.${KV_MINOR} kernel tree"
 KEYWORDS="~amd64 ~x86"
@@ -12,7 +12,7 @@ HOMEPAGE="http://www.calculate-linux.org"
 
 SRC_URI="${KERNEL_URI} ${ARCH_URI} ${CALC_URI}"
 
-UNIPATCH_LIST="${DISTDIR}/${PN}-${CKV}.tar.bz2"
+UNIPATCH_LIST="${DISTDIR}/${PN}-${CL_PATCH}.tar.bz2"
 
 DEPEND="vmlinuz? ( >=sys-kernel/calckernel-3.4.18
 	>=sys-apps/calculate-builder-2.2.22-r2
@@ -23,9 +23,9 @@ IUSE=""
 CL_KERNEL_OPTS="--lvm --mdadm --dmraid"
 
 src_unpack() {
-	calculate-kernel-2_src_unpack
+	calculate-kernel-3_src_unpack
 }
 
 pkg_postinst() {
-	calculate-kernel-2_pkg_postinst
+	calculate-kernel-3_pkg_postinst
 }
