@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-sources-3.0.4.ebuild:
+  Update eclass for kernel compiling
+
 *calculate-sources-3.0.4 (30 Aug 2011)
 
   30 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
